[package]
name = "rmk-nrf52832"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "../../README.md"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { path = "../../../rmk", features = ["async_matrix", "nrf52832_ble"] }
nrf-sdc = { version = "0.1.0", default-features = false, features = [
    "defmt",
    "peripheral",
    "nrf52832",
] }
nrf-mpsl = { version = "0.1.0", default-features = false, features = [
    "defmt",
    "critical-section-impl",
    "nrf52832",
] }
bt-hci = { version = "0.2.1", default-features = false, features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embassy-time = { version = "0.4", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.3.1", features = [
    "defmt",
    "nrf52832",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "time",
] }
embassy-executor = { version = "0.7", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
] }
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
static_cell = "2"

once_cell = { version = "1.19", features = [
    "atomic-polyfill",
], default-features = false }
rand = { version = "0.8.4", default-features = false }
rand_core = { version = "0.6" }
rand_chacha = { version = "0.3", default-features = false }

[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", rev = "954d155" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", rev = "954d155" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", rev = "954d155" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git", rev = "551a95436e999b4290b4a33383aa3d6747b63dd9" }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "rmk-nrf52832"
test = false
bench = false

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
